# Imperial-WBC

./: .gitignore  setup.sh
wbc_display/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  manifest.xml  wbc_display-gnulinux.pc
wbc_display/src/: wbc_display-component.cpp  wbc_display-component.hpp
wbc_fri/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
wbc_fri/Data/Deforming Virtual Surface/Test 1/: Data_Test-ctrl_wbc_fri::servo-estExtJntTrq.dump  Data_Test-ctrl_wbc_fri::servo-fullJpos.dump  Data_Test-ctrl_wbc_fri::servo-fullJvel.dump  Data_Test-ctrl_wbc_fri::servo-gamma.dump  Data_Test-ctrl_wbc_fri::servo-gravity.dump  Data_Test-ctrl_wbc_fri::servo-jpos.dump  Data_Test-ctrl_wbc_fri::servo-jvel.dump  Data_Test-ctrl_wbc_fri::servo-msrJntTrq.dump  Data_Test-skill_-surflimithigh.dump  Data_Test-skill_-surflimitlow.dump  Data_Test-task_0_eepos-actual.dump  Data_Test-task_0_eepos-command.dump  Data_Test-task_0_eepos-control_point.dump  Data_Test-task_0_eepos-end_effector.dump  Data_Test-task_0_eepos-force.dump  Data_Test-task_0_eepos-goalpos.dump  Data_Test-task_0_eepos-goalvel.dump  Data_Test-task_0_eepos-kd.dump  Data_Test-task_0_eepos-kp.dump  Data_Test-task_0_eepos-sigma_threshold.dump  Data_Test-task_1_posture-actual.dump  Data_Test-task_1_posture-command.dump  Data_Test-task_1_posture-force.dump  Data_Test-task_1_posture-goalpos.dump  Data_Test-task_1_posture-kd.dump  Data_Test-task_1_posture-kp.dump  Data_Test-task_1_posture-sigma_threshold.dump
wbc_fri/Data/Deforming Virtual Surface/Test 2/: Data_Test-ctrl_wbc_fri::servo-estExtJntTrq.dump  Data_Test-ctrl_wbc_fri::servo-fullJpos.dump  Data_Test-ctrl_wbc_fri::servo-fullJvel.dump  Data_Test-ctrl_wbc_fri::servo-gamma.dump  Data_Test-ctrl_wbc_fri::servo-gravity.dump  Data_Test-ctrl_wbc_fri::servo-jpos.dump  Data_Test-ctrl_wbc_fri::servo-jvel.dump  Data_Test-ctrl_wbc_fri::servo-msrJntTrq.dump  Data_Test-skill_-surflimithigh.dump  Data_Test-skill_-surflimitlow.dump  Data_Test-task_0_eepos-actual.dump  Data_Test-task_0_eepos-command.dump  Data_Test-task_0_eepos-control_point.dump  Data_Test-task_0_eepos-end_effector.dump  Data_Test-task_0_eepos-force.dump  Data_Test-task_0_eepos-goalpos.dump  Data_Test-task_0_eepos-goalvel.dump  Data_Test-task_0_eepos-kd.dump  Data_Test-task_0_eepos-kp.dump  Data_Test-task_0_eepos-sigma_threshold.dump  Data_Test-task_1_posture-actual.dump  Data_Test-task_1_posture-command.dump  Data_Test-task_1_posture-force.dump  Data_Test-task_1_posture-goalpos.dump  Data_Test-task_1_posture-kd.dump  Data_Test-task_1_posture-kp.dump  Data_Test-task_1_posture-sigma_threshold.dump
wbc_fri/Data/Deforming Virtual Surface/Test 3/: Data_Test-ctrl_wbc_fri::servo-estExtJntTrq.dump  Data_Test-ctrl_wbc_fri::servo-fullJpos.dump  Data_Test-ctrl_wbc_fri::servo-fullJvel.dump  Data_Test-ctrl_wbc_fri::servo-gamma.dump  Data_Test-ctrl_wbc_fri::servo-gravity.dump  Data_Test-ctrl_wbc_fri::servo-jpos.dump  Data_Test-ctrl_wbc_fri::servo-jvel.dump  Data_Test-ctrl_wbc_fri::servo-msrJntTrq.dump  Data_Test-skill_-surflimitlow.dump  Data_Test-task_0_eepos-actual.dump  Data_Test-task_0_eepos-command.dump  Data_Test-task_0_eepos-control_point.dump  Data_Test-task_0_eepos-end_effector.dump  Data_Test-task_0_eepos-force.dump  Data_Test-task_0_eepos-goalpos.dump  Data_Test-task_0_eepos-goalvel.dump  Data_Test-task_0_eepos-kd.dump  Data_Test-task_0_eepos-kp.dump  Data_Test-task_0_eepos-sigma_threshold.dump  Data_Test-task_1_posture-kd.dump  (+6 more)
wbc_fri/Data/Real Surface Tracking/: Data_Test-ctrl_wbc_fri::servo-camData.dump  Data_Test-ctrl_wbc_fri::servo-estExtJntTrq.dump  Data_Test-ctrl_wbc_fri::servo-fullJpos.dump  Data_Test-ctrl_wbc_fri::servo-fullJvel.dump  Data_Test-ctrl_wbc_fri::servo-gamma.dump  Data_Test-ctrl_wbc_fri::servo-gravity.dump  Data_Test-ctrl_wbc_fri::servo-jpos.dump  Data_Test-ctrl_wbc_fri::servo-jvel.dump  Data_Test-ctrl_wbc_fri::servo-msrJntTrq.dump  Data_Test-skill_-surflimithigh.dump  Data_Test-skill_-surflimitlow.dump  Data_Test-task_0_eepos-actual.dump  Data_Test-task_0_eepos-command.dump  Data_Test-task_0_eepos-control_point.dump  Data_Test-task_0_eepos-end_effector.dump  Data_Test-task_0_eepos-force.dump  Data_Test-task_0_eepos-goalpos.dump  Data_Test-task_0_eepos-goalvel.dump  Data_Test-task_0_eepos-kd.dump  Data_Test-task_0_eepos-kp.dump  Data_Test-task_0_eepos-sigma_threshold.dump  Data_Test-task_1_posture-actual.dump  Data_Test-task_1_posture-command.dump  Data_Test-task_1_posture-force.dump  Data_Test-task_1_posture-goalpos.dump  Data_Test-task_1_posture-kd.dump  Data_Test-task_1_posture-kp.dump  Data_Test-task_1_posture-sigma_threshold.dump
wbc_fri/config/: attach.yaml  jointspace.yaml  jopt.yaml  kuka_lwr.xml  opspace_dirnogain.yaml  opspace_holdpos.yaml  rigidtf.yaml  surfacemotion.yaml  surfaceori.yaml  surfaceoripospostnorm.yaml  surfacepos.yaml  surfaceposnorm.yaml  surfacepospost.yaml  surfacepospostnorm.yaml  surfacepost.yaml  surfacepostnorm.yaml
wbc_fri/include/wbc_fri/: rt_util.h  vel_est.h
wbc_fri/msg/: FriJointState.msg  MassMatrix.msg
wbc_fri/src/: comtest.cpp  servo.cpp  udp_osi.cxx  vel_est.cpp
wbc_stb/: CMakeLists.txt  mainpage.dox  manifest.xml
wbc_stb/config/: attach.yaml  isc.yaml  jspace.yaml  opspace_only.yaml  opspace_task.yaml  posori.yaml  rigidtf.yaml  staubli.xml  surfacemotion.yaml  surfaceori.yaml  surfaceori2.yaml  surfaceori3.yaml  surfacetest.yaml  surfacetest2.yaml
wbc_stb/include/wbc_stb/: cs8c_interface.h  ndtypes.h  rt_util.h  sleep.h  udp_osi.h  vis_interface.h  visinfo.h
wbc_stb/src/: Client.cpp  Server.cpp  cameraTest.cpp  fakecamera.cpp  fakecameramoving.cpp  fakerobot.cpp  main.cpp  robottest.cpp  servo.cpp  sleep.c  udp_osi.cxx  udptest.cpp
wbc_uta_opspace/: CMakeLists.txt  Makefile
wbc_uta_opspace/uta_opspace/: AttachSurface.cpp  AttachSurface.hpp  ControllerIF.cpp  ControllerIF.hpp  ControllerNG.cpp  ControllerNG.hpp  ControllerVel.cpp  ControllerVel.hpp  KnownAttachSurface.cpp  KnownAttachSurface.hpp  RigidTf.cpp  RigidTf.hpp  SurfaceMotion.cpp  SurfaceMotion.hpp  SurfaceOriMotion.cpp  SurfaceOriMotion.hpp
(+604 files in other folders)
